# didactic-octo-enigma

./: .gitattributes  .gitignore  Cargo.toml  README.md  check_db.py  chehov.epub  debug_db.py  epub_documents.db  insert_sample_html.py  moby-dick.epub
src/: main.rs
src/api/: mod.rs
src/models/: metadata.rs
src/services/: db.rs  epub_parser.rs  mod.rs  tts.rs
