[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
epub = "2.1"
zip = "0.5"
tempfile = "3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
scraper = "0.18.1"